--- a/src/entrypoints/square-selector.content/style.css
+++ b/src/entrypoints/square-selector.content/style.css
@@ -5,6 +5,7 @@ p {
 .rectangle {
     position: absolute;
     border: 1px solid red;
+    pointer-events: none;
 }
 
 .result-div {
@@ -18,4 +19,27 @@ p {
     top: 0;
     left: 0;
     position: absolute;
+}
+
+.word-wrapper {
+    display: inline-block;
+    border-bottom: 1px dotted;
+    cursor: help;
+}
+
+.word-popup {
+    width: 200px;
+    height: 200px;
+    overflow-y: scroll;
+    position: absolute;
+    visibility: hidden;
+    padding: 5px;
+    background-color: white;
+    border: 1px gray;
+    border-radius: 3px;
+    padding: 8px;
+}
+
+.word-wrapper:hover .word-popup {
+    visibility: visible;
 }
